# sc-ea-hs

./: CHANGELOG.md  haskell-db.cabal  sc-ea-hs.cabal
app/: Main.hs  trash.hs
app/game/: Main.hs
app/map-generator/: Main.hs
src/ScEaHs/: Game.hs  Plugin.hs
src/ScEaHs/GUI/: Game.hs  Player.hs  Render.hs  World.hs
src/ScEaHs/GUI/Player/: Controls.hs
src/ScEaHs/GUI/Plugins/: Controls.hs  History.hs
src/ScEaHs/GUI/Render/: Symbols.hs
src/ScEaHs/Game/: Explosion.hs  Projectile.hs  Surface.hs  World.hs
src/ScEaHs/Game/Explosion/: Logic.hs
src/ScEaHs/Game/Projectile/: Logic.hs
src/ScEaHs/Game/Surface/: Generator.hs
src/ScEaHs/Player/: Controls.hs
src/ScEaHs/Utils/: BoundedPlus.hs  Format.hs  Geometry.hs  List.hs
test/ScEaHs/Game/: SurfaceSpec.hs~
test/ScEaHs/Game/GUI/Render/: SymbolsSpec.hs
test/ScEaHs/Game/Surface/: GeneratorSpec.hs
test/ScEaHs/Utils/: BoundedPlusSpec.hs  GeometrySpec.hs
