cabal-version:      2.4
name:               haskell-db
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable haskell-db
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0
        , aeson ^>= 2.1.2.1
        , bytestring ^>= 0.11.4.0
        , gloss ^>= 1.13.2.2
        , ilist ^>= 0.4.0.1
        , lens ^>= 5.2.2
        , containers ^>= 0.6.7
        , mtl ^>= 2.2.2
        , random ^>= 1.2.1.1
        , time ^>= 1.12.2

    hs-source-dirs:   app
    default-language: Haskell2010
